--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -2,14 +2,18 @@
 
 # dependencies
 /node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
 
-# production
+# production builds
 /build
+/dist
+/frontend/build
+/frontend/dist
 
 # misc
 .DS_Store
@@ -21,6 +25,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor configs
+.vscode/
+.idea/
 
 # Ignore local DB and uploads
 backend/uploads/
