--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿# dependencies
+# dependencies
 node_modules/
 backend/node_modules/
 frontend/node_modules/
@@ -11,7 +11,8 @@ dist/
 .env
 /backend/greenmind.db
 /backend/data/
-/backend/uploads/
+backend/uploads/*
+!backend/uploads/.gitkeep
 /backend/eng.traineddata
 /frontend/.env
 /node_modules/
