--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
-  base    = "frontend"
-  publish = "frontend/build"
+  base = "frontend"
+  publish = "build"          # <-- was "frontend/build"; remove the extra "frontend"
   command = "npm run build"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
-  to   = "/index.html"
+  to = "/index.html"
   status = 200
-  force = true
