--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,9 @@
-
-backend/uploads/
-
+# Ignore uploads folder by default
 backend/uploads/*
+
+# But keep .gitkeep and image files
 !backend/uploads/.gitkeep
+!backend/uploads/**/*.jpg
+!backend/uploads/**/*.jpeg
+!backend/uploads/**/*.png
+!backend/uploads/**/*.webp
